...
                  _pageViewController.nextPage(
                    duration: Duration(milliseconds: 300),
                    curve: Curves.easeInOut,
                  );
                }
              },
              child: Text('Continue'),
            ),
          ),
        ],
      ),
    );
  }
...
